<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="32dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/nav_tab"
            app:cardCornerRadius="2dp"
            app:cardElevation="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:clipToPadding="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="4dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:cardBackgroundColor="#000000"
                app:cardCornerRadius="16dp">

                <FrameLayout
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                >

                    <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal|top"
                    android:layout_marginTop="4dp"
                    app:lottie_rawRes="@raw/tomoe"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_colorFilter="?attr/colorSecondary" 
                    app:lottie_speed="1.75" android:rotation="75" />

                    <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="bottom|start"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    app:lottie_rawRes="@raw/tomoe"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_colorFilter="?attr/colorSecondary" 
                    app:lottie_speed="1.75" android:rotation="-45" />

                    <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:lottie_rawRes="@raw/tomoe"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_colorFilter="?attr/colorSecondary" 
                    app:lottie_speed="1.75" android:rotation="195" />

                </FrameLayout>

                <ImageView
                    android:id="@+id/itemBookImage"
                    android:layout_width="108dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/itemBookTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ellipsize="marquee"
                android:fontFamily="@font/poppins_bold"
                android:minHeight="144dp"
                android:textIsSelectable="true"
                android:textSize="20sp"
                tools:text="@string/empty" />

        </LinearLayout>

        <TextView
            android:id="@+id/itemBookDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:alpha="0.58"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            app:lineHeight="16sp"
            tools:ignore="TextContrastCheck"
            tools:text="@string/always_minimize_info" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/downloads"
            android:textSize="16sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp">

            <ani.dantotsu.FadingEdgeRecyclerView
                android:id="@+id/bookRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:requiresFadingEdge="vertical"
                tools:listitem="@layout/item_url" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>